<resources>
    <string name="app_name">Schedule Exporter</string>
    <string name="action_export">Export</string>
    <string name="action_backward">Go Back</string>
    <string name="action_forward">Go Forward</string>
    <string name="action_reload">Reload</string>
    <string name="action_url">Copy URL</string>
    <string name="expander_expand">Expand</string>
    <string name="expander_collapse">Collapse</string>
    <string name="toggle_dock">Toggle Docked Bar</string>
    <string name="show_dock">Show Docked Bar</string>
    <string name="hide_dock">Hide Docked Bar</string>
    <string name="action_agent">Swap UA</string>
    <string name="dialog_parsing">Parsing</string>
    <string name="activity_config">Settings</string>
    <string name="activity_timing">Periods Manager</string>
    <string name="action_unify_duration">Unify Duration</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="app_wakeup" translatable="false">WakeUp课程表</string>
    <string name="app_miai" translatable="false">小爱课程表</string>
    <string name="miai_integrated">Xiaomi Hyper XiaoAi</string>
    <string name="miai_dedicated" translatable="false">小爱课程表</string>
    <string name="university_unspecified">Auto-detect</string>
    <string name="university_stu">STU</string>
    <string name="university_buu">BUU</string>
</resources>