<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reload"
        android:title="@string/action_reload"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_url"
        android:title="@string/action_url"
        app:showAsAction="never" />
    <item
        android:id="@+id/toggle_dock"
        android:title="@string/toggle_dock"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_timing"
        android:title="@string/activity_timing"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_config"
        android:title="@string/activity_config"
        app:showAsAction="never" />
</menu>