<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_computer"
            app:navigationContentDescription="@string/action_agent"
            app:liftOnScroll="true"
            app:defaultScrollFlagsEnabled="false" />
    </com.google.android.material.appbar.AppBarLayout>

    <eric.schedule_exporter.WebViewEx
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webview"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/indicator"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.dockedtoolbar.DockedToolbarLayout
        android:id="@+id/docked_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_behavior="com.google.android.material.behavior.HideViewOnScrollBehavior">

        <com.google.android.material.button.MaterialButtonGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/backward_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:iconGravity="textStart"
                style="@style/Widget.Material3.DockedToolbar.IconButton"
                app:icon="@drawable/ic_arrow_back"
                android:contentDescription="@string/action_backward"
                android:enabled="false" />

            <Button
                android:id="@+id/export_button"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                app:iconGravity="textStart"
                style="?attr/materialIconButtonFilledStyle"
                app:shapeAppearance="?attr/shapeAppearanceCornerMedium"
                app:icon="@drawable/ic_file_export"
                android:contentDescription="@string/action_export"
                android:enabled="false" />

            <Button
                android:id="@+id/forward_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:iconGravity="textStart"
                style="@style/Widget.Material3.DockedToolbar.IconButton"
                app:icon="@drawable/ic_arrow_forward"
                android:contentDescription="@string/action_forward"
                android:enabled="false" />
        </com.google.android.material.button.MaterialButtonGroup>
    </com.google.android.material.dockedtoolbar.DockedToolbarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@id/search_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_suggestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.search.SearchView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>